[ TG-2 ] Design API and data model
Add group and affiliation entities, add swagger API description. Initial implementation of some methods in group service and group API delegate. Update changelog
