# src/main/java/com/purplepanda/wspologarniacz/api/UserApiDelegateImpl.java
@@ -8,9 +8,9 @@ import com.purplepanda.wspologarniacz.user.exception.UserNotFoundException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
-import java.math.BigDecimal;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.List;
 import java.util.UUID;
 
 @Component
@@ -79,5 +79,10 @@ public class UserApiDelegateImpl implements UserApiDelegate {
     public ResponseEntity<Void> confirm(Long userId) {
         userService.confirmRegistration(userId);
         return ResponseEntity.accepted().build();
+    }
+
+    @Override
+    public ResponseEntity<List<UserDto>> searchUsers(String name, Integer size, Integer number) {
+        return null;
     }
 }
